# UltimateFlox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  colorconvert.py
res/: CMakeLists.txt
res/Models/: filled.mtl
res/Scripts/: flox.lua
res/Shaders/: CMakeLists.txt  boid.frag  boid.vert  colorquadtree.frag  colorquadtree.vert  default.frag  default.vert  direct.compute  quadtree.geom  quadtree.vert  rectangle.frag  rectangle.vert  speeddebug.frag  speeddebug.vert  vision.frag  vision.vert
src/: CMakeLists.txt
src/app/: Application.cpp  CMakeLists.txt  Common.hpp  Flock.cpp  Flock.hpp  pch.cpp  pch.hpp
src/app/Algorithm/: Algorithm.cppm  Algorithm.hpp  DirectComputeAlgorithm.cpp  DirectComputeAlgorithm.hpp  DirectLoopAlgorithm.cpp  DirectLoopAlgorithm.hpp  QuadtreeAlgorithm.cpp  QuadtreeAlgorithm.hpp  ThreadWork.cpp  ThreadedAlgorithm.cpp  ThreadedAlgorithm.cppm  ThreadedAlgorithm.hpp
src/app/Algorithm/Compute/: ComputeAgent.hpp
src/app/Algorithm/Compute/OpenGL/: DirectComputeAgent.cpp  DirectComputeAgent.hpp
src/app/Core/: Event.cpp  Event.hpp  Window.cpp  Window.hpp
src/app/Core/Lua/: Common.cpp  Common.hpp  Errors.cpp  Errors.hpp  Function.cpp  Function.hpp  Lua.cpp  Lua.hpp  Table.cpp  Table.hpp  VirtualMachine.cpp  VirtualMachine.hpp
src/app/Core/Lua/Types/: LuaVector.cpp  LuaVector.hpp
src/app/Core/Platform/GLFW/: imgui_impl_glfw.cpp  imgui_impl_glfw.hpp
src/app/Core/Platform/OpenGL/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.hpp
src/app/Core/UserInterface/: UIComponent.cpp  UIComponent.hpp  UIConsole.cpp  UIConsole.hpp  UIDemoWindow.cpp  UIDemoWindow.hpp  UserInterface.cpp  UserInterface.hpp
src/app/Core/Window/: Event.cpp  Event.hpp  GLFWState.cpp  GLFWStateEmpty.cpp  Window.cpp  Window.hpp
src/app/Math/: Camera.cpp  Camera.cppm  Camera.hpp  Constants.hpp  Rectangle.cpp  Rectangle.cppm  Rectangle.hpp  Vector.cpp  Vector.hpp
src/app/Render/: Controls.cpp  Controls.hpp  FlockRenderer.cpp  FlockRenderer.cppm  FlockRenderer.hpp  Models.cpp  Models.hpp  Object.cpp  Object.hpp  QuadtreeRenderer.cpp  QuadtreeRenderer.cppm  QuadtreeRenderer.hpp  RectangleRenderer.cpp  RectangleRenderer.cppm  RectangleRenderer.hpp
src/app/Render/Boid/: Controls.cpp  Controls.hpp  FlockRenderer.cpp  FlockRenderer.hpp  Models.cpp  Models.hpp  Object.cpp  Object.hpp
src/app/Render/Geometry/: Geometry.cppm  Geometry.hpp  QuadtreeGeometry.cpp  QuadtreeGeometry.cppm  QuadtreeGeometry.hpp
src/app/Structures/: DoubleBuffer.cppm  DoubleBuffer.hpp  Quadtree.cppm  Quadtree.hpp  RawArray.cppm  RawArray.hpp  StringArray.cpp  StringArray.hpp
src/app/World/: Boid.cpp  Boid.cppm  Boid.hpp  Boidtree.cpp  Boidtree.cppm  Boidtree.hpp  Flock.cpp  Flock.cppm  Flock.hpp  Renderer.cpp  Renderer.hpp  World.hpp
src/binary/: CMakeLists.txt  binary_default_lua.cpp
src/lwvl/: Buffer.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Framebuffer.cpp  Framebuffer.hpp  GLDebug.cpp  GLDebug.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  WorldBlock.cpp  WorldBlock.hpp  pch.hpp
src/lwvl/include/lwvl/: lwvl.hpp
src/lwvl/src/: Buffer.cpp  Common.cpp  Debug.cpp  Framebuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  WorldBlock.cpp
src/profile/: CMakeLists.txt
